--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>去除空格</title>
+  <title>remove spaces -remove spaces from any text</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Online space removal tool to quickly remove spaces from text without installation and for free.">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -44,6 +47,6 @@
     </select>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
