--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="description" content="Online space removal tool to quickly remove spaces from text without installation and for free.">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/png" href="favicon.ico">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4WX4B2WWXR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4WX4B2WWXR');
+</script>
 </head>
 <body>
   <div class="container">
