add product-hunt link

--- a/removeExtraSpace/tools.html
+++ b/removeExtraSpace/tools.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="../logo.jpg" alt="Logo">
+      <img id="logo" src="../logo.jpg" alt="Logo">
     </div>
     <h1 id="title"></h1>
     <div class="input-output-container">
@@ -61,7 +61,9 @@
     <a href="../removeExtraSpace/tools.html" id="toTools"></a>
     <!-- 其他导航链接 -->
   </div>
-
+  <div class="product-hunt">
+    <a href="https://www.producthunt.com/posts/no-space?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-no&#0045;space" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=409974&theme=neutral" alt="No&#0032;Space - Remove&#0032;spaces&#0032;from&#0032;text | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+  </div>
   <script src="./extra.js" defer></script>
 </body>
 </html>
